revision 36:
- added Rudi-Shell
revision 35:
- minor fixes in bird.mk, readline.mk
- added fuse 2.6.3
- added ntfs-3g-1.0
- added classpath-0.93
- added libffi-sable-3325
- added jamvm-1.4.5
revision 34:
- minor fixes in pingtunnel.mk, streamripper.mk, tcpdump.mk and bird.mk
- added busybox-patch (tar -t segfault)
revision 33:
- added pingtunnel
- minor fixes in libpcap-patches, busybox-patches
revision 32:
- added tcpdump
- haserl updated to 0.9.16
- minor changes in file.cgi, modhosts
revision 31:
- added bird-1.0.11 (thanks @ derheimi)
revision 30:
- added streamripper-1.61.17
- added libmad-0.15.1b 
revision 28:
- added Lua scripting language
- updated dnsmasq to version 2.38
revision 25:
- updated busybox-patches
- make target for uclibc-utils
revision 24:
- added backup/restore-cgi
revision 19:
- added 7140 30.04.30
revision 17:
- moved missing files into branch
revision 16:
- restructured SVN to hold branches (for a later merge into official svn)
revision 15:
- added haserl
revision 14:
- target toolchain update (binutils 2.17, gcc-4.1.1, uclibc-0.9.28.1) (edit: not working)
revision 13:
- added libpcap
- added knock-package
- updatet 7141 to 40.04.30
revision 12:
- added cpmaccfg-package
revision 11:
- added shadow000's webinterface mod (orangebox)
revision 10:
- fixed calllist for labor-firmwares (foncalls.patch)
- update to busybox-1.4.1
- cpmac-ioctl.patch
- kernel-printk.patch
revision 8:
- update to busybox-1.4.0
- added some kernel-modules (ntfs, cifs, smbfs)
revision 5:
- fixed W701V-webmenu patch
revision 4:
- more W701V fixes
- added some iptable-modules
revision 3:
- updated openvpn-Package to 0.6b
- updated .version
- fixed W701V patch
- added avm-ftpd-remove patch
revision 2:
- fixed modules_install with parallel make
- added unionfs 
- added libreadline
revision 1:
- initial checkin