@@ -44,8 +44,7 @@ $(STREAMRIPPER_DIR)/.configured: mad $(STREAMRIPPER_DIR)/.unpacked
 
 $(STREAMRIPPER_DIR)/$(STREAMRIPPER_TARGET_BINARY): $(STREAMRIPPER_DIR)/.configured
 	( PATH="$(TARGET_PATH)" \
-		CPPFLAGS+="-I$(TARGET_MAKE_PATH)/../usr/include" \
-		make -C all $(TCPDUMP_DIR) \
+		make -C $(STREAMRIPPER_DIR) all\
 	);
 
 $(PACKAGES_DIR)/.streamripper-$(STREAMRIPPER_VERSION): $(DL_DIR)/$(STREAMRIPPER_PKG_SOURCE)
